--- a/IntraWebApi.Services/IntraWebApi.Services.csproj
+++ b/IntraWebApi.Services/IntraWebApi.Services.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="2.0.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.2.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\IntraWebApi.Data\IntraWebApi.Data.csproj" />
+  </ItemGroup>
+
 </Project>
