--- a/IntraWebApi/appsettings.json
+++ b/IntraWebApi/appsettings.json
@@ -11,5 +11,6 @@
         "Default": "Warning"
       }
     }
-  }
+  },
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=IntraDB;Trusted_Connection=True;ConnectRetryCount=0"
 }
