Add mssql docker

--- a/IntraWebApi/appsettings.json
+++ b/IntraWebApi/appsettings.json
@@ -12,5 +12,5 @@
       }
     }
   },
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=IntraDB;Trusted_Connection=True;ConnectRetryCount=0"
+  "ConnectionString": "Server=localhost:1401\\intrawebsql;Database=IntraDB;Trusted_Connection=True;ConnectRetryCount=0"
 }
