--- a/IntraWebApi.Data/IntraWebApi.Data.csproj
+++ b/IntraWebApi.Data/IntraWebApi.Data.csproj
@@ -5,9 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+  <DotNetCliToolReference 
+      Include="Microsoft.EntityFrameworkCore.Tools" 
+      Version="2.0.3" />
+  <DotNetCliToolReference 
+      Include="Microsoft.EntityFrameworkCore.Tools.DotNet" 
+      Version="2.0.3" /> 
   </ItemGroup>
 
   <ItemGroup>
